fix: menu problem on mobile sign-in

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -1,6 +1,5 @@
 .menu {
   font-size: 16px;
-  text-align: center;
 }
 
 .menu__button {
